created dataframe of concatenated satisfied and unsatisfied reviews

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "'wonderful concept graphics gameplay outta interactivity seamless community connectivity superb one issue many updates mean amount times need update game year frustrating heck type updating app yet exciting new content drawback needing restore previous content activision could something app would guaranteed thanks hardwork though thumbs_up'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "4  annoying experience round ever since update se...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
        "4  annoying experience round ever since update se...          0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,21 +683,234 @@
     "# extracting every word in satisfied users review\n",
     "for word in satisfied[\"final_word_corpus\"]:\n",
     "    satisfied_corpos.append(word.split())\n",
-    "final_satisfied_corpos = [s for S in satisfied_corpos for s in S] # 1D array of satisfied reviews words\n",
+    "final_satisfied_corpos = [word for words in satisfied_corpos for word in words] # 1D array of satisfied reviews words\n",
+    "final_satisfied_corpos_string = \" \".join(final_satisfied_corpos) # String containing all satisfied user tokens\n",
     "\n",
     "# extracting every word in unsatisfied users review\n",
     "for word in unsatisfied[\"final_word_corpus\"]:\n",
     "    unsatisfied_corpos.append(word.split())\n",
-    "final_satisfied_corpos = [s for S in unsatisfied_corpos for s in S] # 1D array of unsatisfied reviews words"
+    "final_unsatisfied_corpos = [word for words in unsatisfied_corpos for word in words] # 1D array of unsatisfied reviews words\n",
+    "final_unsatisfied_corpos_string = \" \".join(final_unsatisfied_corpos) # String containing all unsatisfied user tokens\n",
+    "\n",
+    "# Adding words from satisfied and unsatisfied reviews into dictionary for frequency count\n",
+    "satisfied_unsatisfied_words ={\n",
+    "    \"satisfied\": final_satisfied_corpos_string,\n",
+    "    \"unsatisfied\": final_unsatisfied_corpos_string\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>satisfied</th>\n",
+       "      <td>playing years quite addictive u developers pls...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unsatisfied</th>\n",
+       "      <td>annoying experience round ever since update se...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 review_tokens\n",
+       "satisfied    playing years quite addictive u developers pls...\n",
+       "unsatisfied  annoying experience round ever since update se..."
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DataFrame of all words (concatenated) used in satisfied and unsatisfied reviews \n",
+    "df = pd.DataFrame(satisfied_unsatisfied_words, index=[\"review_tokens\"])\n",
+    "df = df.T\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = CountVectorizer(stop_words=\"english\")\n"
+    "# cv = CountVectorizer(stop_words=\"english\")\n",
+    "# data_cv = cv.fit_transform(df)\n",
+    "# df = pd.DataFrame(data_cv.toarray(), columns=data_cv.get_feature_names_out())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# corpus = [\"annoying experience round ever annoying experience round ever since update season wild dogs unable enjoy game without game running like cracked cd interests player developer suggest reverse whatever upgrade done forget continually buff storage size games run time phones remain must necessarily high end thousand dollar devices play game\",\n",
+    "# \"wonderful concept graphics gameplay outta interactivity seamless community connectivity superb one issue many updates mean amount times need update game year frustrating heck type updating app yet exciting new content drawback needing restore previous content activision could something app would guaranteed thanks hardwork though thumbs_up\"]\n",
+    "# cv2 = CountVectorizer(stop_words=\"english\")\n",
+    "\n",
+    "# x = cv2.fit_transform(corpus)\n",
+    "# x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>activision</th>\n",
+       "      <th>annoying</th>\n",
+       "      <th>app</th>\n",
+       "      <th>buff</th>\n",
+       "      <th>cd</th>\n",
+       "      <th>community</th>\n",
+       "      <th>concept</th>\n",
+       "      <th>connectivity</th>\n",
+       "      <th>content</th>\n",
+       "      <th>continually</th>\n",
+       "      <th>...</th>\n",
+       "      <th>times</th>\n",
+       "      <th>type</th>\n",
+       "      <th>unable</th>\n",
+       "      <th>update</th>\n",
+       "      <th>updates</th>\n",
+       "      <th>updating</th>\n",
+       "      <th>upgrade</th>\n",
+       "      <th>wild</th>\n",
+       "      <th>wonderful</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 70 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   activision  annoying  app  buff  cd  community  concept  connectivity  \\\n",
+       "0           0         2    0     1   1          0        0             0   \n",
+       "1           1         0    2     0   0          1        1             1   \n",
+       "\n",
+       "   content  continually  ...  times  type  unable  update  updates  updating  \\\n",
+       "0        0            1  ...      0     0       1       1        0         0   \n",
+       "1        2            0  ...      1     1       0       1        1         1   \n",
+       "\n",
+       "   upgrade  wild  wonderful  year  \n",
+       "0        1     1          0     0  \n",
+       "1        0     0          1     1  \n",
+       "\n",
+       "[2 rows x 70 columns]"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(x.toarray(), columns=cv2.get_feature_names_out())\n",
+    "# df"
    ]
   },
   {
