Document term frequency calculatd

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -747,46 +747,33 @@
        "unsatisfied  annoying experience round ever since update se..."
       ]
      },
-     "execution_count": 262,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# DataFrame of all words (concatenated) used in satisfied and unsatisfied reviews \n",
-    "df = pd.DataFrame(satisfied_unsatisfied_words, index=[\"review_tokens\"])\n",
-    "df = df.T\n",
-    "df"
+    "concatenated_reviews = pd.DataFrame(satisfied_unsatisfied_words, index=[\"review_tokens\"])\n",
+    "concatenated_reviews = concatenated_reviews.T\n",
+    "concatenated_reviews"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cv = CountVectorizer(stop_words=\"english\")\n",
-    "# data_cv = cv.fit_transform(df)\n",
-    "# df = pd.DataFrame(data_cv.toarray(), columns=data_cv.get_feature_names_out())"
+    "# Calculating Document term matrix\n",
+    "cv = CountVectorizer(stop_words=\"english\")\n",
+    "concatenated_reviews_cv = cv.fit_transform(concatenated_reviews[\"review_tokens\"])\n",
+    "document_term_matrix = pd.DataFrame(concatenated_reviews_cv.toarray(),columns =cv.get_feature_names_out(), index=[\"satisfied\", \"unsatisfied\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# corpus = [\"annoying experience round ever annoying experience round ever since update season wild dogs unable enjoy game without game running like cracked cd interests player developer suggest reverse whatever upgrade done forget continually buff storage size games run time phones remain must necessarily high end thousand dollar devices play game\",\n",
-    "# \"wonderful concept graphics gameplay outta interactivity seamless community connectivity superb one issue many updates mean amount times need update game year frustrating heck type updating app yet exciting new content drawback needing restore previous content activision could something app would guaranteed thanks hardwork though thumbs_up\"]\n",
-    "# cv2 = CountVectorizer(stop_words=\"english\")\n",
-    "\n",
-    "# x = cv2.fit_transform(corpus)\n",
-    "# x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -810,107 +797,106 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>activision</th>\n",
-       "      <th>annoying</th>\n",
-       "      <th>app</th>\n",
-       "      <th>buff</th>\n",
-       "      <th>cd</th>\n",
-       "      <th>community</th>\n",
-       "      <th>concept</th>\n",
-       "      <th>connectivity</th>\n",
-       "      <th>content</th>\n",
-       "      <th>continually</th>\n",
+       "      <th>aa</th>\n",
+       "      <th>aaa</th>\n",
+       "      <th>aaaaawwwwwsssoom</th>\n",
+       "      <th>aats</th>\n",
+       "      <th>abandoned</th>\n",
+       "      <th>abandoning</th>\n",
+       "      <th>abeg</th>\n",
+       "      <th>abel</th>\n",
+       "      <th>abiding</th>\n",
+       "      <th>abiet</th>\n",
        "      <th>...</th>\n",
-       "      <th>times</th>\n",
-       "      <th>type</th>\n",
-       "      <th>unable</th>\n",
-       "      <th>update</th>\n",
-       "      <th>updates</th>\n",
-       "      <th>updating</th>\n",
-       "      <th>upgrade</th>\n",
-       "      <th>wild</th>\n",
-       "      <th>wonderful</th>\n",
-       "      <th>year</th>\n",
+       "      <th>zillion</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>zm</th>\n",
+       "      <th>zombie</th>\n",
+       "      <th>zombies</th>\n",
+       "      <th>zombiesode</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>zones</th>\n",
+       "      <th>zoom</th>\n",
+       "      <th>zooms</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>satisfied</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>139</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>25</td>\n",
        "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <th>unsatisfied</th>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 70 columns</p>\n",
+       "<p>2 rows × 7746 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   activision  annoying  app  buff  cd  community  concept  connectivity  \\\n",
-       "0           0         2    0     1   1          0        0             0   \n",
-       "1           1         0    2     0   0          1        1             1   \n",
+       "             aa  aaa  aaaaawwwwwsssoom  aats  abandoned  abandoning  abeg  \\\n",
+       "satisfied     1    0                 1     1          0           0     2   \n",
+       "unsatisfied   0    2                 0     0          1           1     0   \n",
        "\n",
-       "   content  continually  ...  times  type  unable  update  updates  updating  \\\n",
-       "0        0            1  ...      0     0       1       1        0         0   \n",
-       "1        2            0  ...      1     1       0       1        1         1   \n",
+       "             abel  abiding  abiet  ...  zillion  zip  zm  zombie  zombies  \\\n",
+       "satisfied       1        1      1  ...        2    0   1      44      139   \n",
+       "unsatisfied     0        0      0  ...        0    1   0       6       61   \n",
        "\n",
-       "   upgrade  wild  wonderful  year  \n",
-       "0        1     1          0     0  \n",
-       "1        0     0          1     1  \n",
+       "             zombiesode  zone  zones  zoom  zooms  \n",
+       "satisfied             1    25      1     2      1  \n",
+       "unsatisfied           0     5      0     0      1  \n",
        "\n",
-       "[2 rows x 70 columns]"
+       "[2 rows x 7746 columns]"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(x.toarray(), columns=cv2.get_feature_names_out())\n",
-    "# df"
+    "document_term_matrix"
    ]
   },
   {
