start note for tomorrow added

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -905,7 +905,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(stopwords.words('english'))"
+    "# print(stopwords.words('english'))\n",
+    "# APPLY WORD STEMMING AND OR LEMMING BEFORE CALCULATING DOC-TERM FREQUENCY"
    ]
   }
  ],
