Adjusted most common words dataframe

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -889,9 +889,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Frame containing top words for each reviews type\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -920,73 +927,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(game, 4435)</td>\n",
-       "      <td>(game, 2195)</td>\n",
+       "      <td>game</td>\n",
+       "      <td>game</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>(play, 1639)</td>\n",
-       "      <td>(play, 840)</td>\n",
+       "      <td>play</td>\n",
+       "      <td>play</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(like, 880)</td>\n",
-       "      <td>(updat, 681)</td>\n",
+       "      <td>like</td>\n",
+       "      <td>updat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>(good, 850)</td>\n",
-       "      <td>(time, 479)</td>\n",
+       "      <td>good</td>\n",
+       "      <td>time</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(updat, 766)</td>\n",
-       "      <td>(fix, 364)</td>\n",
+       "      <td>updat</td>\n",
+       "      <td>fix</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>(love, 646)</td>\n",
-       "      <td>(like, 356)</td>\n",
+       "      <td>love</td>\n",
+       "      <td>like</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>(great, 594)</td>\n",
-       "      <td>(download, 326)</td>\n",
+       "      <td>great</td>\n",
+       "      <td>download</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>(graphic, 573)</td>\n",
-       "      <td>(use, 273)</td>\n",
+       "      <td>graphic</td>\n",
+       "      <td>use</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>(time, 546)</td>\n",
-       "      <td>(match, 263)</td>\n",
+       "      <td>time</td>\n",
+       "      <td>match</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>(mobil, 540)</td>\n",
-       "      <td>(pleas, 246)</td>\n",
+       "      <td>mobil</td>\n",
+       "      <td>pleas</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        satisfied      unsatisfied\n",
-       "0    (game, 4435)     (game, 2195)\n",
-       "1    (play, 1639)      (play, 840)\n",
-       "2     (like, 880)     (updat, 681)\n",
-       "3     (good, 850)      (time, 479)\n",
-       "4    (updat, 766)       (fix, 364)\n",
-       "5     (love, 646)      (like, 356)\n",
-       "6    (great, 594)  (download, 326)\n",
-       "7  (graphic, 573)       (use, 273)\n",
-       "8     (time, 546)     (match, 263)\n",
-       "9    (mobil, 540)     (pleas, 246)"
+       "  satisfied unsatisfied\n",
+       "0      game        game\n",
+       "1      play        play\n",
+       "2      like       updat\n",
+       "3      good        time\n",
+       "4     updat         fix\n",
+       "5      love        like\n",
+       "6     great    download\n",
+       "7   graphic         use\n",
+       "8      time       match\n",
+       "9     mobil       pleas"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,11 +1002,21 @@
     "top_terms_dict = {}\n",
     "for col in document_term_matrix.columns:\n",
     "    top_terms = document_term_matrix[col].sort_values(ascending=False).head(50)\n",
-    "    top_terms_dict[col] = list(zip(top_terms.index, top_terms.values))\n",
+    "    top_terms_dict[col] = top_terms.index\n",
     "\n",
     "# Dataframe of top words\n",
     "top_terms_df= pd.DataFrame(top_terms_dict)\n",
+    "print(\"Data Frame containing top words for each reviews type\")\n",
     "top_terms_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The above dataframe suggests that;\n",
+    "- both satisfiied and unsatisfied user reviews share most common words. Hence, those words need to be removed as the \n",
+    "  don't add much value to the difference between both review types"
    ]
   }
  ],
