Extraction of top 100 terms for comparison

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -993,15 +993,16 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Sorting terms by frequency in descending order\n",
     "top_terms_dict = {}\n",
     "for col in document_term_matrix.columns:\n",
-    "    top_terms = document_term_matrix[col].sort_values(ascending=False).head(50)\n",
+    "    top_terms = document_term_matrix[col].sort_values(ascending=False).head(100)\n",
     "    top_terms_dict[col] = top_terms.index\n",
     "\n",
     "# Dataframe of top words\n",
@@ -1017,6 +1018,42 @@
     "> The above dataframe suggests that;\n",
     "- both satisfiied and unsatisfied user reviews share most common words. Hence, those words need to be removed as the \n",
     "  don't add much value to the difference between both review types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['game', 'play', 'like', 'good', 'updat', 'love', 'great', 'graphic',\n",
+      "       'time', 'mobil', 'best', 'realli', 'fix', 'pleas', 'make', 'player',\n",
+      "       'download', 'problem', 'fun', 'new', 'need', 'phone', 'gun', 'control',\n",
+      "       'mode', 'map', 'use', 'thing', 'issu', 'cod', 'lag', 'lot', 'match',\n",
+      "       'everi', 'battl', 'weapon', 'star', 'better', 'amaz', 'season', 'tri',\n",
+      "       'work', 'awesom', 'sinc', 'start', 'rank', 'peopl', 'mani', 'royal',\n",
+      "       'want', 'duti', 'bug', 'gb', 'skin', 'devic', 'say', 'everyth', 'br',\n",
+      "       'add', 'zombi', 'way', 'kill', 'thank', 'year', 'gameplay', 'app',\n",
+      "       'enjoy', 'glitch', 'experi', 'think', 'storag', 'alway', 'connect',\n",
+      "       'chang', 'free', 'overal', 'fp', 'low', 'end', 'space', 'level', 'codm',\n",
+      "       'know', 'team', 'sometim', 'nice', 'shoot', 'money', 'multiplay',\n",
+      "       'look', 'someth', 'come', 'thumbs_up', 'day', 'got', 'charact', 'point',\n",
+      "       'bad', 'screen', 'high'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Coparing top 100 terms from satisfied and unsatisfied reviws\n",
+    "# to compare terms and produce new stop words.\n",
+    "\n",
+    "# Extracting top 100 terms to list\n",
+    "satisfied_top_100 = top_terms_dict.get(\"satisfied\")\n",
+    "unsatisfied_top_100 = top_terms_dict.get(\"unsatisfied\")\n",
+    "satisfied_top_100"
    ]
   }
  ],
