--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -1022,28 +1022,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['game', 'play', 'like', 'good', 'updat', 'love', 'great', 'graphic',\n",
-      "       'time', 'mobil', 'best', 'realli', 'fix', 'pleas', 'make', 'player',\n",
-      "       'download', 'problem', 'fun', 'new', 'need', 'phone', 'gun', 'control',\n",
-      "       'mode', 'map', 'use', 'thing', 'issu', 'cod', 'lag', 'lot', 'match',\n",
-      "       'everi', 'battl', 'weapon', 'star', 'better', 'amaz', 'season', 'tri',\n",
-      "       'work', 'awesom', 'sinc', 'start', 'rank', 'peopl', 'mani', 'royal',\n",
-      "       'want', 'duti', 'bug', 'gb', 'skin', 'devic', 'say', 'everyth', 'br',\n",
-      "       'add', 'zombi', 'way', 'kill', 'thank', 'year', 'gameplay', 'app',\n",
-      "       'enjoy', 'glitch', 'experi', 'think', 'storag', 'alway', 'connect',\n",
-      "       'chang', 'free', 'overal', 'fp', 'low', 'end', 'space', 'level', 'codm',\n",
-      "       'know', 'team', 'sometim', 'nice', 'shoot', 'money', 'multiplay',\n",
-      "       'look', 'someth', 'come', 'thumbs_up', 'day', 'got', 'charact', 'point',\n",
-      "       'bad', 'screen', 'high'],\n",
-      "      dtype='object')\n"
+      "70\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['game',\n",
+       " 'play',\n",
+       " 'like',\n",
+       " 'good',\n",
+       " 'updat',\n",
+       " 'love',\n",
+       " 'great',\n",
+       " 'graphic',\n",
+       " 'time',\n",
+       " 'mobil',\n",
+       " 'realli',\n",
+       " 'fix',\n",
+       " 'pleas',\n",
+       " 'make',\n",
+       " 'player',\n",
+       " 'download',\n",
+       " 'problem',\n",
+       " 'fun',\n",
+       " 'new',\n",
+       " 'need',\n",
+       " 'phone',\n",
+       " 'gun',\n",
+       " 'control',\n",
+       " 'mode',\n",
+       " 'map',\n",
+       " 'use',\n",
+       " 'thing',\n",
+       " 'issu',\n",
+       " 'cod',\n",
+       " 'lag',\n",
+       " 'lot',\n",
+       " 'match',\n",
+       " 'everi',\n",
+       " 'battl',\n",
+       " 'weapon',\n",
+       " 'star',\n",
+       " 'better',\n",
+       " 'season',\n",
+       " 'tri',\n",
+       " 'work',\n",
+       " 'sinc',\n",
+       " 'start',\n",
+       " 'rank',\n",
+       " 'peopl',\n",
+       " 'mani',\n",
+       " 'want',\n",
+       " 'bug',\n",
+       " 'gb',\n",
+       " 'skin',\n",
+       " 'devic',\n",
+       " 'say',\n",
+       " 'everyth',\n",
+       " 'way',\n",
+       " 'kill',\n",
+       " 'year',\n",
+       " 'app',\n",
+       " 'glitch',\n",
+       " 'alway',\n",
+       " 'connect',\n",
+       " 'chang',\n",
+       " 'know',\n",
+       " 'team',\n",
+       " 'money',\n",
+       " 'someth',\n",
+       " 'day',\n",
+       " 'got',\n",
+       " 'point',\n",
+       " 'bad',\n",
+       " 'screen',\n",
+       " 'high']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1053,7 +1119,11 @@
     "# Extracting top 100 terms to list\n",
     "satisfied_top_100 = top_terms_dict.get(\"satisfied\")\n",
     "unsatisfied_top_100 = top_terms_dict.get(\"unsatisfied\")\n",
-    "satisfied_top_100"
+    "\n",
+    "# Checking for presence of term from satisfied_top_100 in unsatisfied_top_100\n",
+    "similar_terms = [term for term in satisfied_top_100 if term in unsatisfied_top_100]\n",
+    "print(len(similar_terms))\n",
+    "similar_terms"
    ]
   }
  ],
