Comment for next working day

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -993,16 +993,18 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Sorting terms by frequency in descending order\n",
+    "AMOUNT = 100 # Number of top terms to retreive.\n",
+    "\n",
     "top_terms_dict = {}\n",
     "for col in document_term_matrix.columns:\n",
-    "    top_terms = document_term_matrix[col].sort_values(ascending=False).head(100)\n",
+    "    top_terms = document_term_matrix[col].sort_values(ascending=False).head(AMOUNT)\n",
     "    top_terms_dict[col] = top_terms.index\n",
     "\n",
     "# Dataframe of top words\n",
@@ -1022,98 +1024,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70\n"
+      "There are 70 most common terms in top 100 satisfied and unsatisfied user reviews\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['game',\n",
-       " 'play',\n",
-       " 'like',\n",
-       " 'good',\n",
-       " 'updat',\n",
-       " 'love',\n",
-       " 'great',\n",
-       " 'graphic',\n",
-       " 'time',\n",
-       " 'mobil',\n",
-       " 'realli',\n",
-       " 'fix',\n",
-       " 'pleas',\n",
-       " 'make',\n",
-       " 'player',\n",
-       " 'download',\n",
-       " 'problem',\n",
-       " 'fun',\n",
-       " 'new',\n",
-       " 'need',\n",
-       " 'phone',\n",
-       " 'gun',\n",
-       " 'control',\n",
-       " 'mode',\n",
-       " 'map',\n",
-       " 'use',\n",
-       " 'thing',\n",
-       " 'issu',\n",
-       " 'cod',\n",
-       " 'lag',\n",
-       " 'lot',\n",
-       " 'match',\n",
-       " 'everi',\n",
-       " 'battl',\n",
-       " 'weapon',\n",
-       " 'star',\n",
-       " 'better',\n",
-       " 'season',\n",
-       " 'tri',\n",
-       " 'work',\n",
-       " 'sinc',\n",
-       " 'start',\n",
-       " 'rank',\n",
-       " 'peopl',\n",
-       " 'mani',\n",
-       " 'want',\n",
-       " 'bug',\n",
-       " 'gb',\n",
-       " 'skin',\n",
-       " 'devic',\n",
-       " 'say',\n",
-       " 'everyth',\n",
-       " 'way',\n",
-       " 'kill',\n",
-       " 'year',\n",
-       " 'app',\n",
-       " 'glitch',\n",
-       " 'alway',\n",
-       " 'connect',\n",
-       " 'chang',\n",
-       " 'know',\n",
-       " 'team',\n",
-       " 'money',\n",
-       " 'someth',\n",
-       " 'day',\n",
-       " 'got',\n",
-       " 'point',\n",
-       " 'bad',\n",
-       " 'screen',\n",
-       " 'high']"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Coparing top 100 terms from satisfied and unsatisfied reviws\n",
+    "# Coparing top n terms from satisfied and unsatisfied reviws\n",
     "# to compare terms and produce new stop words.\n",
     "\n",
     "# Extracting top 100 terms to list\n",
@@ -1121,9 +1044,17 @@
     "unsatisfied_top_100 = top_terms_dict.get(\"unsatisfied\")\n",
     "\n",
     "# Checking for presence of term from satisfied_top_100 in unsatisfied_top_100\n",
-    "similar_terms = [term for term in satisfied_top_100 if term in unsatisfied_top_100]\n",
-    "print(len(similar_terms))\n",
-    "similar_terms"
+    "common_terms = [term for term in satisfied_top_100 if term in unsatisfied_top_100]\n",
+    "print(\"There are %d most common terms in top %d satisfied and unsatisfied user reviews\" %(len(common_terms), AMOUNT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding most common terms to stopwords.\n"
    ]
   }
  ],
