Removed custom stopwords

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "4  annoy experi round ever sinc updat season wild...          0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -993,14 +993,14 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Sorting terms by frequency in descending order\n",
-    "AMOUNT = 100 # Number of top terms to retreive.\n",
+    "AMOUNT = 150 # Number of top terms to retreive.\n",
     "\n",
     "top_terms_dict = {}\n",
     "for col in document_term_matrix.columns:\n",
@@ -1024,37 +1024,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 70 most common terms in top 100 satisfied and unsatisfied user reviews\n"
+      "There are 110 most common terms in top 150 satisfied and unsatisfied user reviews\n"
      ]
     }
    ],
    "source": [
-    "# Coparing top n terms from satisfied and unsatisfied reviws\n",
+    "# Comparing top n terms from satisfied and unsatisfied reviews\n",
     "# to compare terms and produce new stop words.\n",
     "\n",
-    "# Extracting top 100 terms to list\n",
-    "satisfied_top_100 = top_terms_dict.get(\"satisfied\")\n",
-    "unsatisfied_top_100 = top_terms_dict.get(\"unsatisfied\")\n",
+    "# Extracting top n terms to list\n",
+    "satisfied_top_n = top_terms_dict.get(\"satisfied\")\n",
+    "unsatisfied_top_n = top_terms_dict.get(\"unsatisfied\")\n",
     "\n",
-    "# Checking for presence of term from satisfied_top_100 in unsatisfied_top_100\n",
-    "common_terms = [term for term in satisfied_top_100 if term in unsatisfied_top_100]\n",
-    "print(\"There are %d most common terms in top %d satisfied and unsatisfied user reviews\" %(len(common_terms), AMOUNT))"
+    "# Checking for presence of term from satisfied_top_n in unsatisfied_top_n\n",
+    "custom_stop_words = [term for term in satisfied_top_n if term in unsatisfied_top_n]\n",
+    "print(\"There are %d most common terms in top %d satisfied and unsatisfied user reviews\" %(len(custom_stop_words), AMOUNT))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>final_word_corpus</th>\n",
+       "      <th>satisfied</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>quit addict u plss see far distanc vulner surp...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>round ever wild dog unabl without crack cd int...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>though close real greatest consist upgrad larg...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>quit addict u plss see far distanc vulner surp...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>round ever wild dog unabl without crack cd int...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   final_word_corpus  satisfied\n",
+       "0  quit addict u plss see far distanc vulner surp...          1\n",
+       "1  round ever wild dog unabl without crack cd int...          0\n",
+       "2  though close real greatest consist upgrad larg...          1\n",
+       "3  quit addict u plss see far distanc vulner surp...          1\n",
+       "4  round ever wild dog unabl without crack cd int...          0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Adding most common terms to stopwords.\n"
+    "# Removing custom stop words from already lemmatized dataframe\n",
+    "# custom_stop_words\n",
+    "data[\"final_word_corpus\"] = data[\"final_word_corpus\"].apply(lambda x: ' '.join(word for word in x.split() if word not in (custom_stop_words)))\n",
+    "final_df = data[[\"final_word_corpus\", \"satisfied\"]]\n",
+    "final_df.head()"
    ]
   }
  ],
